# doc2kb

./: .env.example  .gitignore  README.md  pyproject.toml
doc2kb/: __init__.py  chunker.py  cli.py  config.py  embedder.py  markdown_writer.py  store.py  utils.py  wiki_writer.py
doc2kb/ingestion/: __init__.py  docx.py  handwriting.py  pdf.py  pptx.py  text.py  web.py
doc2kb/webapp/: app.py
doc2kb/webapp/static/: app.js  index.html  style.css
tests/: conftest.py  test_chunker.py  test_config.py  test_ingestion_pdf.py  test_ingestion_router.py  test_ingestion_text.py  test_ingestion_web.py  test_integration.py  test_markdown_writer.py  test_store.py  test_utils.py
