[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc2kb"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "trafilatura>=1.12",
    "pymupdf4llm>=0.0.17",
    "mammoth>=1.8",
    "python-pptx>=1.0",
    "markdownify>=0.13",
    "chromadb>=0.5",
    "click>=8.1",
    "python-frontmatter>=1.1",
    "python-slugify>=8.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
# Handwriting OCR (local TrOCR model)
ocr = [
    "transformers>=4.40",
    "torch>=2.0",
]
# Cloud OCR fallback
cloud = [
    "transformers>=4.40",
    "torch>=2.0",
    "google-cloud-vision>=3.7",
]

[project.scripts]
doc2kb = "doc2kb.cli:cli"
