[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc2kb"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "trafilatura>=1.12",
    "pymupdf>=1.27",
    "pymupdf4llm>=0.0.17",
    "mammoth>=1.8",
    "python-pptx>=1.0",
    "markdownify>=0.13",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "click>=8.1",
    "python-frontmatter>=1.1",
    "python-slugify>=8.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
# Local handwriting OCR (80+ languages via EasyOCR)
ocr = ["easyocr>=1.7"]
# Local OCR + Google Vision cloud fallback
cloud = ["easyocr>=1.7", "google-cloud-vision>=3.7"]
# Web frontend
web = ["fastapi>=0.111", "uvicorn>=0.30", "python-multipart>=0.0.9"]
# Everything
all = ["easyocr>=1.7", "google-cloud-vision>=3.7", "fastapi>=0.111", "uvicorn>=0.30", "python-multipart>=0.0.9"]

[project.scripts]
doc2kb = "doc2kb.cli:cli"
